# mercadolibre-senior-dataengineer-test

./: .dockerignore  .gitignore  Makefile  README.md  coverage.xml  docker.env  local.env  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: CI Pipeline.yml  ci.yml
apps/: runner.py
apps/dags/: etl_pipeline_dag.py
data/raw/: 12312.csv
envs/: docker.env  local.env
expectations/reports/pays/: schema_raw.json  schema_raw_2025-08-16.json
expectations/reports/prints/: schema_flat.json  schema_flat_2025-08-16.json  schema_raw.json  schema_raw_2025-08-16.json
expectations/reports/taps/: schema_flat.json  schema_flat_2025-08-16.json  schema_raw.json  schema_raw_2025-08-16.json
infra/: docker-compose.yml
infra/airflow/: Dockerfile
infra/minio/: create-buckets.sh
mercadolibre_senior_dataengineer_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
metadata/: pays_schema.json  prints_schema.json  taps_schema.json
notebooks/: basic_etl.ipynb
src/adapters/: logging.py  reader.py
src/application/: dq_and_load.py  flatten.py  transform_service.py  validation.py
src/config/: paths.py
src/domain/: schema_registry.py
tests/unit/: test_flatten.py  test_flatten_complex.py  test_flatten_logic.py  test_loader.py  test_logging.py  test_paths.py  test_raw_schema.py  test_transform.py  test_validation.py  test_validation_complex.py  test_validation_logic.py
tests/unit/data/: final.py  pays.py  prints.py  taps.py  test_reader.py
